# cop3014-p8-f18

./: CMakeLists.txt  SettingTheCurve.cpp  asg7.cpp
cmake_modules/: FindSFML.cmake
resources/: grade1.in
